// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<button
  className="button"
>
  Yolo Group
</button>
`;

exports[`matches snapshot correctly when there are no props 1`] = `
<button
  className="button"
/>
`;
